fetches general data by locationand date and displays it as a json with a row limit for each page
